# scramble

./: .editorconfig  .gitignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIAL.md  PRP.md  README.md  TODO.md  build.sh  meson.build  meson_options.txt  meson_post_install.py  run_tests.py
.claude/: settings.local.json
.github/workflows/: update-flatpak.yml
PRPs/: scramble-implementation.md
data/: io.github.tobagin.scramble.appdata.xml.in  io.github.tobagin.scramble.desktop.in  io.github.tobagin.scramble.gschema.xml  io.github.tobagin.scramble.gschema.xml.in  io.github.tobagin.scramble.metainfo.xml.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  scramble.gresource.xml
data/ui/: meson.build  metadata_row.blp  preferences_dialog.blp  shortcuts-window.blp  window.blp
data/ui/dialogs/: preferences_dialog.blp  shortcuts_window.blp
data/ui/widgets/: metadata_row.blp
openspec/: project.md
openspec/changes/archive/2025-10-20-enhance-security-and-validation/: tasks.md
openspec/changes/enhance-security-and-validation/: proposal.md
openspec/changes/refactor-project-structure/: proposal.md  tasks.md
packaging/: io.github.tobagin.scramble-local.yml  io.github.tobagin.scramble.Devel.yml  io.github.tobagin.scramble.yml
po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  fr.po  meson.build  pt.po
scripts/: build.sh
src/: Main.vala  Window.vala  __main__.py  _version.py  comparison_dialog.vala  config.vala.in  file_validator.vala  heif-format-detection.vala  heif-image-processing.vala  heif-metadata-extraction.vala  heif_format_detector.vala  heif_image_processor.vala  heif_metadata_extractor.vala  image_operations.vala  main.py  meson.build  metadata.py  metadata_display.vala  metadata_exporter.vala  metadata_row.py  preferences_dialog.py  preferences_dialog.vala  scramble.in  secure_memory.vala  security_hardening.py  security_validators.py  shortcuts-window.vala  window.py  window.vala
src/core/: BatchProcessor.vala  ImageOperations.vala
src/dialogs/: AboutDialog.vala  PreferencesDialog.vala  ShortcutsWindow.vala
src/utils/: Constants.vala  FileValidator.vala  MagicNumberValidator.vala  MetadataFilter.vala  SecureMemory.vala
src/widgets/: MetadataRow.vala
tests/: __init__.py  test_integration.py  test_metadata.py  test_security.py  test_window.py
tests/contract/: test_heif_format_detection.vala  test_heif_image_processing.vala  test_heif_metadata_extraction.vala
tests/integration/: test_heif_file_opening.vala
