# Application icons
install_data('hicolor/scalable/apps/io.github.tobagin.scramble.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data('hicolor/symbolic/apps/io.github.tobagin.scramble-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)